[metadata]
name = ncvue
description = ncvue: A minimal GUI for a quick view of netcdf files, aiming to be a drop-in replacement for ncview and panoply
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mcuntz/ncvue
author = Matthias Cuntz
author_email = mc@macu.de
maintainer = Matthias Cuntz
maintainer_email = mc@macu.de
license = MIT
license_files = [LICEN[CS]E*, AUTHORS*]
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://mcuntz.github.io/ncvue/
    Source = https://github.com/mcuntz/ncvue
    Tracker = https://github.com/mcuntz/ncvue/issues
    Changelog = https://github.com/mcuntz/ncvue/blob/main/CHANGELOG.rst
    # Conda-Forge = https://anaconda.org/conda-forge/ncvue

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    scipy
    netcdf4
    cython
    pyshp
    six
    shapely
    matplotlib
    pykdtree
    cartopy
python_requires = >=3.8
zip_safe = False
include_package_data = True

[options.entry_points]
gui_scripts =
    ncvue = ncvue.__main__:main

[options.packages.find]
where = src
exclude =
    bin*
    tests*
    docs*

[options.package_data]
# include in any subpackage
# * = *.png, *.ico, *.tcl
# Include from subdirectories of src/ncvue
src/ncvue =
    images/*.png
    images/*.ico
    themes/azure-2.0/*
    themes/azure-2.0/theme/*.tcl
    themes/azure-2.0/theme/light/*.png
    themes/azure-2.0/theme/dark/*.png

[options.extras_require]
doc =
    numpy
    scipy
    netcdf4
    matplotlib
    pyproj
    geos
    cython
    pyshp
    six
    shapely
    pillow
    pykdtree
    numpydoc>=1.1,<2
    sphinx>=3
    sphinx_book_theme>=1.0.1
test =
    numpy
    coverage[toml]>=5.2.1
    pytest>=6.0
    pytest-cov>=2.11.0
